changed main class reference in assembly plugin

--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
 						<configuration>
 							<archive>
 								<manifest>
-									<mainClass>App</mainClass>
+									<mainClass>view.App</mainClass>
 								</manifest>
 							</archive>
 							<descriptorRefs>
